address comments from Catherine

--- a/index.Rmd
+++ b/index.Rmd
@@ -82,13 +82,13 @@ class: inverse, center, middle
 <p style="line-height:1.4">
 <b>Évaluation d'impact</b>:
 <br/>
-<i>Évaluation des effets d’un projet désigné effectuée conformément à la présente loi.‍</i>
+<i>Évaluation des effets d’un projet désigné effectuée conformément à la Loi sur l’évaluation d’impact (Canada).‍ Ou Évaluation de tout projet encadré par la procédure d’évaluation et d’examen des impacts sur l’environnement prévue en vertu de la Loi sur la qualité de l’environnement (Québec).‍</i>
 </p>
 
 --
 
 <p style="line-height:1.4">
-<b>Effets cumulatifs</b>:
+<b>Effets cumulatifs dans le cadre d'un projet</b>:
 <br/>
 <i>Effets environnementaux cumulatifs susceptibles de résulter d’un projet, combinés aux effets environnementaux d’autres activités concrètes, passées ou futures.‍</i>
 </p>
@@ -98,7 +98,7 @@ class: inverse, center, middle
 <p style="line-height:1.4">
 <b>Évaluation régionale</b>:
 <br/>
-<i>Les évaluations régionales permettent au gouvernement du Canada d’aller au-delà des évaluations d’impact limitées à un projet afin de comprendre le contexte régional, en fournissant une analyse plus complète de façon à éclairer les décisions de futures évaluations d’impact.‍</i>
+<i>Les évaluations régionales permettent au gouvernement du Canada d’aller au-delà des évaluations d’impact limitées à un projet afin de comprendre le contexte régional, en fournissant une analyse plus complète des effets d’activités concrètes existantes ou futures exercées dans une région de façon à éclairer les décisions de futures évaluations d’impact.‍</i>
 </p>
 
 
